Add profiles, dynamic model selection, and AI profile wizard
- Add profile system (create, edit, delete, set default) with manage-profiles command
- Add dynamic model fetching per provider with last-used model persistence
- Add model and profile dropdowns to grammar checker form
- Add generateText and buildSystemPrompt for AI-powered profile creation
- Update all LLM providers to accept custom system prompts and add generate functions
- Update default models (gpt-4.1-mini, claude-sonnet-4-5, gemini-2.5-flash)
- Remove static model preference in favor of per-provider LocalStorage
- Show profile name in history entries
- Fix AI wizard to use last-used model from LocalStorage

--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
       "title": "Grammar History",
       "description": "Review past grammar corrections for study",
       "mode": "view"
+    },
+    {
+      "name": "manage-profiles",
+      "title": "Manage Profiles",
+      "description": "Create and manage profiles for personalized grammar corrections",
+      "mode": "view"
     }
   ],
   "preferences": [
@@ -63,14 +69,6 @@
       "type": "textfield",
       "required": false,
       "default": "http://localhost:11434"
-    },
-    {
-      "name": "model",
-      "title": "Model Name",
-      "description": "Model to use (leave empty for default)",
-      "type": "textfield",
-      "required": false,
-      "placeholder": "gpt-4o-mini / claude-sonnet-4-20250514 / gemini-3-flash-preview / llama3.2"
     }
   ],
   "dependencies": {
