--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,14 +1,19 @@
 {
   "name": "@bex/core",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": true,
   "type": "module",
+  "sideEffects": false,
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
+    },
+    "./node": {
+      "types": "./dist/storage/json-file-storage.d.ts",
+      "import": "./dist/storage/json-file-storage.js"
     }
   },
   "files": [
