Add menubar popup with global hotkey and Popup component tests
- Menubar tray with system tray icon and quick-check popup window
- Global Cmd+Shift+G hotkey to toggle popup from anywhere
- Popup.tsx: textarea input, grammar check, diff view, copy result
- Rust backend: tray lifecycle, window management, global shortcuts
- Popup.test.tsx: 8 test cases covering rendering, shortcuts, check flow, error handling, clipboard
- Bump version to 0.3.0

--- a/packages/app/src-tauri/Cargo.toml
+++ b/packages/app/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bex-app"
-version = "0.2.1"
+version = "0.3.0"
 description = "Bex Grammar Checker"
 authors = ["you"]
 edition = "2021"
@@ -13,8 +13,9 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
+tauri = { version = "2", features = ["tray-icon"] }
 tauri-plugin-opener = "2"
 tauri-plugin-fs = "2"
+tauri-plugin-global-shortcut = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
